config/envoy.yaml
static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 80
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          codec_type: AUTO
          # Let Envoy determine the client address and publish it in x-envoy-external-address.
          # use_remote_address: true makes Envoy overwrite that header on every request, so
          # clients cannot inject it. xff_num_trusted_hops: 1 trusts ONE X-Forwarded-For entry,
          # which is what lets you simulate client IPs locally with `curl -H "X-Forwarded-For: ..."`.
          # In production set xff_num_trusted_hops to the number of trusted proxies in front of
          # Envoy (0 when Envoy is the edge). See docs/guides/client-ip.md.
          use_remote_address: true
          xff_num_trusted_hops: 1
          access_log:
          - name: envoy.access_loggers.file
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
              path: /dev/stdout
              log_format:
                text_format: "remote=%DOWNSTREAM_REMOTE_ADDRESS_WITHOUT_PORT% authority=\"%REQ(:AUTHORITY)%\" protocol=%PROTOCOL% method=%REQ(:METHOD)% code=\"%RESPONSE_CODE%\" path=\"%REQ(X-ENVOY-ORIGINAL-PATH?:PATH)%\" duration=%DURATION% req_duration=%REQUEST_DURATION% res_duration=%RESPONSE_DURATION% service_time=%RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)% b_received=%BYTES_RECEIVED% b_sent=%BYTES_SENT% req_h_bytes=%REQUEST_HEADERS_BYTES% res_h_bytes=%RESPONSE_HEADERS_BYTES% ua=\"%REQ(USER-AGENT)% [...]
          route_config:
            name: local_route
            virtual_hosts:
            - name: backend
              domains: ["*"]
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: upstream_service
          http_filters:
          - name: envoy.filters.http.ext_authz
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthz
              transport_api_version: V3
              grpc_service:
                envoy_grpc:
                  cluster_name: ext_authz_cluster
                timeout: 1s
              failure_mode_allow: false
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

  clusters:
  - name: upstream_service
    connect_timeout: 5s
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: upstream_service
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: upstream
                port_value: 80

  - name: ext_authz_cluster
    connect_timeout: 1s
    type: LOGICAL_DNS
    lb_policy: ROUND_ROBIN
    typed_extension_protocol_options:
      envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
        "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
        explicit_http_config:
          http2_protocol_options: {}
    load_assignment:
      cluster_name: ext_authz_cluster
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: host.docker.internal
                port_value: 9001

admin:
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9901
